# UnityTransformChanges

./: .gitignore  CMakeLists.txt  package.json
UnityTransformChanges/: INativeDataPtr.cs  NativeDataPtrExtensions.cs  NativeTransform.cs  NativeTransformHierarchy.cs  StrangeLoopGames.UnityTransformChanges.asmdef  TransformAccessReadonly.cs  TransformDebugUtils.cs  package.json
UnityTransformChanges.Plugin/: CMakeLists.txt  Debug.cpp  Debug.h  HookInfo.cpp  HookInfo.h  MonoAssembly.cpp  MonoAssembly.h  PEHeaderParser.cpp  PEHeaderParser.h  Patch.cpp  Patch.h  PatchSequence.cpp  PatchSequence.h  PatchTarget.cpp  PatchTarget.h  UnityRuntime.cpp  UnityRuntime.h  UnityTransformChanges.cpp  UnityTransformChanges.h  pch.h
UnityTransformChanges.Plugin/Writers/: FarJumpWriter.cpp  FarJumpWriter.h  MemoryWriter.cpp  MemoryWriter.h  MovToRaxWriter.cpp  MovToRaxWriter.h
UnityTransformChanges/InternalAPIEngineBridge/: AssemblyInfo.cs  UnityInternalsBridge.cs
